--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         </div>
     </div>
 
-    <h1 data-lang-key="gameTitle">2048</h1>
+    <h1 data-lang-key="gameTitle">2048 NoneUp</h1>
     <div class="info"><span data-lang-key="scoreLabel">Очки</span>: <span id="score">0</span> | <span data-lang-key="bestLabel">Рекорд</span>: <span id="best">0</span></div>
     
     <div class="grid-container">
@@ -645,7 +645,7 @@
         // Мовні налаштування
         const translations = {
             uk: {
-                gameTitle: "2048",
+                gameTitle: "NoneUp",
                 scoreLabel: "Очки",
                 bestLabel: "Рекорд",
                 startButton: "Грати",
@@ -683,7 +683,7 @@
                 installMessagePrompt: "" // Змінено на порожній рядок
             },
             en: {
-                gameTitle: "2048",
+                gameTitle: "NoneUp",
                 scoreLabel: "Score",
                 bestLabel: "Best",
                 startButton: "Play",
@@ -720,7 +720,7 @@
                 installMessagePrompt: "" // Changed to empty string
             },
             zh: { // Китайська
-                gameTitle: "2048",
+                gameTitle: "NoneUp",
                 scoreLabel: "分數",
                 bestLabel: "最佳",
                 startButton: "玩",
@@ -757,7 +757,7 @@
                 installMessagePrompt: "" // 更改為空字符串
             },
             ja: { // Японська
-                gameTitle: "2048",
+                gameTitle: "NoneUp",
                 scoreLabel: "スコア",
                 bestLabel: "最高",
                 startButton: "プレイ",
