--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 id="settingsTitle" data-lang-key="settingsTitle">Налаштування</h2>
             <button id="controlsBtn" class="btn" style="margin-top: 15px;" data-lang-key="controlsButton">Управління</button>
             <div class="setting-options" style="margin-top: 20px;"> <div style="position: relative; margin-bottom: 15px;">
-                    <button id="langBtn" class="top-btn" data-lang-key="languageButton">Мова ▼</button>
+                    <button id="langBtn" class="btn" data-lang-key="languageButton">Мова ▼</button>
                     <div id="langPopup" class="mini-popup" role="listbox" aria-label="Вибір мови">
                         <button data-lang="zh">中文 (Китайська)</button>
                         <button data-lang="uk">Українська</button>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div style="position: relative;">
-                    <button id="themeBtn" class="top-btn" data-lang-key="themeButton">Тема ▼</button>
+                    <button id="themeBtn" class="btn" data-lang-key="themeButton">Тема ▼</button>
                     <div id="themePopup" class="mini-popup" role="listbox" aria-label="Вибір теми">
                         <button data-theme="dark" data-lang-key="darkTheme">Темна тема</button>
                         <button data-theme="light" data-lang-key="lightTheme">Світла тема</button>
