--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       min-height: 100vh;
       flex-direction: column;
       color: var(--text-color);
+      overflow: hidden;
     }
     
     .game-container {
