--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
     }
     
     .tile[data-value="2"] { background: #2e2d40; color: #d0d0ff; }
-    .tile[data-value="4"] { background: #2d2a4a; color: #c0c0ff; }
-    .tile[data-value="8"] { background: #3a2a5a; color: #b0a0ff; }
-    .tile[data-value="16"] { background: #4a2a6a; color: #a080ff; }
-    .tile[data-value="32"] { background: #5a2a7a; color: #9060ff; }
-    .tile[data-value="64"] { background: #6a2a8a; color: #8040ff; }
-    .tile[data-value="128"] { background: #3a4a8a; color: #a0c0ff; font-size: 1.8em; }
-    .tile[data-value="256"] { background: #2a5a9a; color: #80b0ff; font-size: 1.8em; }
-    .tile[data-value="512"] { background: #2a6aaa; color: #60a0ff; font-size: 1.8em; }
-    .tile[data-value="1024"] { background: #2a7aba; color: #4090ff; font-size: 1.5em; }
-    .tile[data-value="2048"] { background: #2a8aca; color: #2080ff; font-size: 1.5em; }
+    .tile[data-value="4"] { background: #2d2a4a; color: #d0d0ff; }
+    .tile[data-value="8"] { background: #3a2a5a; color: #d0d0ff; }
+    .tile[data-value="16"] { background: #4a2a6a; color: #d0d0ff; }
+    .tile[data-value="32"] { background: #5a2a7a; color: #d0d0ff; }
+    .tile[data-value="64"] { background: #6a2a8a; color: #d0d0ff; }
+    .tile[data-value="128"] { background: #3a4a8a; color: #d0d0ff; font-size: 1.8em; }
+    .tile[data-value="256"] { background: #2a5a9a; color: #d0d0ff; font-size: 1.8em; }
+    .tile[data-value="512"] { background: #2a6aaa; color: #d0d0ff; font-size: 1.8em; }
+    .tile[data-value="1024"] { background: #2a7aba; color: #d0d0ff; font-size: 1.5em; }
+    .tile[data-value="2048"] { background: #2a8aca; color: #d0d0ff; font-size: 1.5em; }
     
     .game-over {
       position: absolute;
