--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="./logo-192x192.png">
     <link rel="icon" href="logo.jpg" type="image/png">
-    <meta name="theme-color" content="#3a2a5a">
+    <meta name="theme-color" content="green">
   <title>NoneUp 2048 Game</title>
   <style>
     :root {
