--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
     .tile[data-value="512"] { background: #2a6aaa; color: #d0d0ff; font-size: 1.8em; }
     .tile[data-value="1024"] { background: #2a7aba; color: #d0d0ff; font-size: 1.5em; }
     .tile[data-value="2048"] { background: #2a8aca; color: #d0d0ff; font-size: 1.5em; }
-    
+    .tile[data-value="4096"] { background: #2a9adb; color: #ffffff; font-size: 1.4em; }
+    .tile[data-value="8192"] { background: #2aabd0; color: #ffffff; font-size: 1.3em; }
+    .tile[data-value="16384"] { background: #2abdb0; color: #ffffff; font-size: 1.2em; }
+    .tile[data-value="32768"] { background: #2ace90; color: #ffffff; font-size: 1.1em; }
+    .tile[data-value="65536"] { background: #2ae070; color: #ffffff; font-size: 1em; }
     .game-over {
       position: absolute;
       top: 0;
