--- a/index.html
+++ b/index.html
@@ -531,10 +531,11 @@
     <div class="modal-text">
       <h2>Last news:</h2>
       <p></p>
-      <p>• We’ve added a News button.</p>
-      <p>• Updated the New Game button prompt.</p>
-      <p>• Removed the game over condition – now you can compete with friends indefinitely!</p>
-      <h5>Version: 1.2.0</h5>
+      <p>• Added settings button.</p>
+      <p>• Added rules and instructions.</p>
+      <p>• New launch animation.</p>
+      <p>• Minor bugs fixed.</p>
+      <h5>Version: 1.3.5</h5>
     </div>
   </div>
 </div>
