--- a/index.html
+++ b/index.html
@@ -1135,5 +1135,15 @@ window.addEventListener('click', (e) => {
 
 </script>
 
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('./service-worker.js')
+        .then(reg => console.log('✅ Service Worker зареєстрований:', reg.scope))
+        .catch(err => console.log('❌ Помилка Service Worker:', err));
+    });
+  }
+</script>
+
 </body>
 </html>
