--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
     .small-btn:hover { background:var(--button-hover); }
     .note { font-size:0.9em; opacity:0.85; margin-top:12px; line-height:1.3; }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P5Z64XBXVQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P5Z64XBXVQ');
+</script>
+  
 </head>
 <body>
   <div class="game-container">
